# sp_vision_tutorial_26

lecture2/: CMakeLists.txt
lecture2/homework/: fmt_test.cpp  main.cpp  tools.cpp  tools.hpp
lecture3/homework/: main.cpp
lecture3/homework/io/: my_camera.cpp  my_camera.hpp
